// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`( 1`] = `
Array [
  Object {
    "data": Object {
      "close": false,
      "type": 0,
    },
    "type": Object {
      "enum": Object {
        "0": "IDENTIFIER",
        "1": "NUMBER_LITERAL",
        "2": "INTEGER_TYPE",
        "3": "STRING_LITERAL",
        "4": "ENTRY_BLOCK",
        "5": "KEY_WORD",
        "6": "OPEN_CLOSE",
        "ENTRY_BLOCK": 4,
        "IDENTIFIER": 0,
        "INTEGER_TYPE": 2,
        "KEY_WORD": 5,
        "NUMBER_LITERAL": 1,
        "OPEN_CLOSE": 6,
        "STRING_LITERAL": 3,
      },
      "id": 6,
    },
  },
]
`;

exports[`(, 1`] = `
Array [
  Object {
    "data": Object {
      "close": false,
      "type": 0,
    },
    "type": Object {
      "enum": Object {
        "0": "IDENTIFIER",
        "1": "NUMBER_LITERAL",
        "2": "INTEGER_TYPE",
        "3": "STRING_LITERAL",
        "4": "ENTRY_BLOCK",
        "5": "KEY_WORD",
        "6": "OPEN_CLOSE",
        "ENTRY_BLOCK": 4,
        "IDENTIFIER": 0,
        "INTEGER_TYPE": 2,
        "KEY_WORD": 5,
        "NUMBER_LITERAL": 1,
        "OPEN_CLOSE": 6,
        "STRING_LITERAL": 3,
      },
      "id": 6,
    },
  },
  Object {
    "data": Object {
      "enum": Object {
        "0": "PRIVATE",
        "1": "UNNAMED_ADDR",
        "10": "RETURN",
        "11": "EQUALS",
        "12": "GLOBAL",
        "13": "NO_CAPTURE",
        "14": "NO_ALIAS",
        "15": "COMMA",
        "16": "VOID",
        "17": "NO_FREE",
        "2": "CONSTANT",
        "3": "ALIGN",
        "4": "DECLARE",
        "5": "DEFINE",
        "6": "PTR",
        "7": "GET_ELEMENT_PTR",
        "8": "INBOUNDS",
        "9": "X",
        "ALIGN": 3,
        "COMMA": 15,
        "CONSTANT": 2,
        "DECLARE": 4,
        "DEFINE": 5,
        "EQUALS": 11,
        "GET_ELEMENT_PTR": 7,
        "GLOBAL": 12,
        "INBOUNDS": 8,
        "NO_ALIAS": 14,
        "NO_CAPTURE": 13,
        "NO_FREE": 17,
        "PRIVATE": 0,
        "PTR": 6,
        "RETURN": 10,
        "UNNAMED_ADDR": 1,
        "VOID": 16,
        "X": 9,
      },
      "id": 15,
    },
    "type": Object {
      "enum": Object {
        "0": "IDENTIFIER",
        "1": "NUMBER_LITERAL",
        "2": "INTEGER_TYPE",
        "3": "STRING_LITERAL",
        "4": "ENTRY_BLOCK",
        "5": "KEY_WORD",
        "6": "OPEN_CLOSE",
        "ENTRY_BLOCK": 4,
        "IDENTIFIER": 0,
        "INTEGER_TYPE": 2,
        "KEY_WORD": 5,
        "NUMBER_LITERAL": 1,
        "OPEN_CLOSE": 6,
        "STRING_LITERAL": 3,
      },
      "id": 5,
    },
  },
]
`;

exports[`declare i32 @puts(ptr) 1`] = `
Array [
  Object {
    "data": Object {
      "enum": Object {
        "0": "PRIVATE",
        "1": "UNNAMED_ADDR",
        "10": "RETURN",
        "11": "EQUALS",
        "12": "GLOBAL",
        "13": "NO_CAPTURE",
        "14": "NO_ALIAS",
        "15": "COMMA",
        "16": "VOID",
        "17": "NO_FREE",
        "2": "CONSTANT",
        "3": "ALIGN",
        "4": "DECLARE",
        "5": "DEFINE",
        "6": "PTR",
        "7": "GET_ELEMENT_PTR",
        "8": "INBOUNDS",
        "9": "X",
        "ALIGN": 3,
        "COMMA": 15,
        "CONSTANT": 2,
        "DECLARE": 4,
        "DEFINE": 5,
        "EQUALS": 11,
        "GET_ELEMENT_PTR": 7,
        "GLOBAL": 12,
        "INBOUNDS": 8,
        "NO_ALIAS": 14,
        "NO_CAPTURE": 13,
        "NO_FREE": 17,
        "PRIVATE": 0,
        "PTR": 6,
        "RETURN": 10,
        "UNNAMED_ADDR": 1,
        "VOID": 16,
        "X": 9,
      },
      "id": 4,
    },
    "type": Object {
      "enum": Object {
        "0": "IDENTIFIER",
        "1": "NUMBER_LITERAL",
        "2": "INTEGER_TYPE",
        "3": "STRING_LITERAL",
        "4": "ENTRY_BLOCK",
        "5": "KEY_WORD",
        "6": "OPEN_CLOSE",
        "ENTRY_BLOCK": 4,
        "IDENTIFIER": 0,
        "INTEGER_TYPE": 2,
        "KEY_WORD": 5,
        "NUMBER_LITERAL": 1,
        "OPEN_CLOSE": 6,
        "STRING_LITERAL": 3,
      },
      "id": 5,
    },
  },
  Object {
    "data": 32,
    "type": Object {
      "enum": Object {
        "0": "IDENTIFIER",
        "1": "NUMBER_LITERAL",
        "2": "INTEGER_TYPE",
        "3": "STRING_LITERAL",
        "4": "ENTRY_BLOCK",
        "5": "KEY_WORD",
        "6": "OPEN_CLOSE",
        "ENTRY_BLOCK": 4,
        "IDENTIFIER": 0,
        "INTEGER_TYPE": 2,
        "KEY_WORD": 5,
        "NUMBER_LITERAL": 1,
        "OPEN_CLOSE": 6,
        "STRING_LITERAL": 3,
      },
      "id": 2,
    },
  },
  Object {
    "data": Object {
      "name": "puts",
      "type": 0,
    },
    "type": Object {
      "enum": Object {
        "0": "IDENTIFIER",
        "1": "NUMBER_LITERAL",
        "2": "INTEGER_TYPE",
        "3": "STRING_LITERAL",
        "4": "ENTRY_BLOCK",
        "5": "KEY_WORD",
        "6": "OPEN_CLOSE",
        "ENTRY_BLOCK": 4,
        "IDENTIFIER": 0,
        "INTEGER_TYPE": 2,
        "KEY_WORD": 5,
        "NUMBER_LITERAL": 1,
        "OPEN_CLOSE": 6,
        "STRING_LITERAL": 3,
      },
      "id": 0,
    },
  },
  Object {
    "data": Object {
      "close": false,
      "type": 0,
    },
    "type": Object {
      "enum": Object {
        "0": "IDENTIFIER",
        "1": "NUMBER_LITERAL",
        "2": "INTEGER_TYPE",
        "3": "STRING_LITERAL",
        "4": "ENTRY_BLOCK",
        "5": "KEY_WORD",
        "6": "OPEN_CLOSE",
        "ENTRY_BLOCK": 4,
        "IDENTIFIER": 0,
        "INTEGER_TYPE": 2,
        "KEY_WORD": 5,
        "NUMBER_LITERAL": 1,
        "OPEN_CLOSE": 6,
        "STRING_LITERAL": 3,
      },
      "id": 6,
    },
  },
  Object {
    "data": Object {
      "enum": Object {
        "0": "PRIVATE",
        "1": "UNNAMED_ADDR",
        "10": "RETURN",
        "11": "EQUALS",
        "12": "GLOBAL",
        "13": "NO_CAPTURE",
        "14": "NO_ALIAS",
        "15": "COMMA",
        "16": "VOID",
        "17": "NO_FREE",
        "2": "CONSTANT",
        "3": "ALIGN",
        "4": "DECLARE",
        "5": "DEFINE",
        "6": "PTR",
        "7": "GET_ELEMENT_PTR",
        "8": "INBOUNDS",
        "9": "X",
        "ALIGN": 3,
        "COMMA": 15,
        "CONSTANT": 2,
        "DECLARE": 4,
        "DEFINE": 5,
        "EQUALS": 11,
        "GET_ELEMENT_PTR": 7,
        "GLOBAL": 12,
        "INBOUNDS": 8,
        "NO_ALIAS": 14,
        "NO_CAPTURE": 13,
        "NO_FREE": 17,
        "PRIVATE": 0,
        "PTR": 6,
        "RETURN": 10,
        "UNNAMED_ADDR": 1,
        "VOID": 16,
        "X": 9,
      },
      "id": 6,
    },
    "type": Object {
      "enum": Object {
        "0": "IDENTIFIER",
        "1": "NUMBER_LITERAL",
        "2": "INTEGER_TYPE",
        "3": "STRING_LITERAL",
        "4": "ENTRY_BLOCK",
        "5": "KEY_WORD",
        "6": "OPEN_CLOSE",
        "ENTRY_BLOCK": 4,
        "IDENTIFIER": 0,
        "INTEGER_TYPE": 2,
        "KEY_WORD": 5,
        "NUMBER_LITERAL": 1,
        "OPEN_CLOSE": 6,
        "STRING_LITERAL": 3,
      },
      "id": 5,
    },
  },
  Object {
    "data": Object {
      "close": true,
      "type": 0,
    },
    "type": Object {
      "enum": Object {
        "0": "IDENTIFIER",
        "1": "NUMBER_LITERAL",
        "2": "INTEGER_TYPE",
        "3": "STRING_LITERAL",
        "4": "ENTRY_BLOCK",
        "5": "KEY_WORD",
        "6": "OPEN_CLOSE",
        "ENTRY_BLOCK": 4,
        "IDENTIFIER": 0,
        "INTEGER_TYPE": 2,
        "KEY_WORD": 5,
        "NUMBER_LITERAL": 1,
        "OPEN_CLOSE": 6,
        "STRING_LITERAL": 3,
      },
      "id": 6,
    },
  },
]
`;
